# libSemphella

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile~  UpgradeLog2.htm  UpgradeLog3.htm  UpgradeLog5.htm  export.bat  replace.mark  replace.sh  win32.sln  图片 - 快捷方式.lnk
APDEditor/: APDEditor.csproj  Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs
APD_UTILS/: APD_UTILS.vcxproj  CMakeLists.txt  main.cpp
CSAPDConvert/: CSAPDConvert.csproj  Program.cs
CSemphella/: AES.cs  BinaryString.cs  CSemphella.csproj  CacheInterface.cs  DebugNode.cs  EMail.cs  RSAHelper.cs  ValueData.cs  apd.cs  inioperator.cs  libSemphellaCS.cs  utils.cs  web.cs
CryptUtilsGUI/: CryptUtilsGUI.csproj  Form1.Designer.cs  Form1.cs  Program.cs
Debug/: data.lit  decode.txt
DragonEDGE/: CMakeLists.txt  DragonEDGE.cpp  DragonEDGE.vcxproj  Makefile  ReadMe.txt  api.h  linux.cpp  stdafx.h  windows.cpp
DragonNet/: AboutBox1.Designer.cs  AboutBox1.cs  DragonNet.csproj  Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs  Signal.Designer.cs  Signal.cs
EFU/: EFU.cpp  EFU.vcxproj  EFU.vcxproj.filters  ReadMe.txt  format.h  stdafx.cpp
EV_APP/: CALL_TYPE.h  CMakeLists.txt  EV_APP.cpp  EV_APP.vcxproj  EV_APP.vcxproj.filters  ReadMe.txt  call.h  stdafx.cpp
EmuSPI/: CMakeLists.txt  EMU_EEPROM.h  EmuSPI.vcxproj  EmuSPI.vcxproj.filters  atlas.cpp  main.cpp  modules.h
InsightServer/: InsightServer.cpp  InsightServer.vcxproj  InsightServer.vcxproj.filters  ReadMe.txt  clinet.cpp  feature.h  mod.cpp  server.cpp  stdafx.cpp  utils.cpp  utils.h
InsightServer.drop/: InsightServer.cpp  clinet.cpp  feature.h  include.h  mod.h  utils.cpp
MSHELL/: MSHELL.cpp  MSHELL.vcxproj  MSHELL.vcxproj.filters  ReadMe.txt  stdafx.cpp  stdafx.h
MySql.Data/: BulkLoader.cs  CharSetMap.cs  CommandBuilder.cs  CompressedStream.cs  Connection.cs  Crypt.cs  Driver.cs  Exception.cs  Field.cs  ISSchemaProvider.cs  Installer.cs  MySql.Data.csproj  MySqlClientFactory.cs  MySqlClientPermission.cs  MySqlClientPermissionAttribute.cs  MySqlConfiguration.cs  MySqlConnectionStringBuilder.cs  MySqlError.cs  MySqlHelper.cs  MySqlPacket.cs  MySqlPool.cs  MySqlPoolManager.cs  MySqlPromotableTransaction.cs  MySqlScript.cs  MySqlSecurityPermission.cs  MySqlStream.cs  MysqlDefs.cs  NativeDriver.cs  PerformanceMonitor.cs  PreparableStatement.cs  ProcedureCache.cs  ResultSet.cs  Schema.cs  SchemaProvider.cs  SpecialFeature.cs  Statement.cs  StoredProcedure.cs  SystemPerformanceMonitor.cs  TableCache.cs  TimedStream.cs  (+7 more)
PT/: CMakeLists.txt  Makefile  Makefile~  ReadMe.txt  algorthim.cpp  define.h  entry.cpp  libPT.cpp  libPT.h  runner.cpp  runner.vcxproj  runner.vcxproj.filters  stdafx.cpp  stdafx.h  storage.h  targetver.h  utils.cpp  vector.cpp
PT2/: CMakeLists.txt  PT2.cpp  PT2.vcxproj  PT2.vcxproj.filters  ReadMe.txt  stdafx.cpp  stdafx.h
PT_INSTALL/: GroupPackages.isl  GroupPackages.isproj
PerformanceInvilige/: CMakeLists.txt  PerformanceInvilige  PerformanceInvilige.cpp  PerformanceInvilige.vcxproj  PerformanceInvilige.vcxproj.filters  ReadMe.txt  stdafx.cpp  stdafx.h  targetver.h
Release/: DragonEDGE.iobj  DragonEDGE.ipdb  EFU.iobj  EFU.ipdb  PT.iobj  PT.ipdb  bios.iobj  bios.ipdb  cryptutil.iobj  cryptutil.ipdb  flash_mix.iobj  flash_mix.ipdb  libSemphella.iobj  libSemphella.ipdb  mpshell.iobj  mpshell.ipdb  s2s.iobj  s2s.ipdb  time_lize.iobj  time_lize.ipdb
SemphellaAutoUpdate/: CompareProcessor.cs  Form1.Designer.cs  Form1.cs  Interface.txt  Program.cs  SemphellaAutoUpdate.csproj  (+1 more)
TAHITI/: CMakeLists.txt  Makefile  ReadMe.txt  TAHITI.cpp  TAHITI.vcxproj  TAHITI.vcxproj.filters  build.sh  client.cpp  config.h  event.cpp  event.h  feature_define.h  hertbeat.cpp  hertbeat.h  hertbeat.mod.cpp  inline.h  kernel.h  linux_support.hpp  modules.cpp  modules.h  modules_api.cpp  multi_platform.h  net_base.h  permission.cpp  permission.h  protoco.cpp  protoco.h  protoco.mod.cpp  protocoV1.cpp  protocoV2.cpp  server.cpp  serverutil.h  serverutils.cpp  stdafx.h
TAHITI/ExtenisionLIB/: configure.cpp  configure.h  translate.cpp  translate.h
TAHITI/Release/: TAHITI.vcxprojResolveAssemblyReference.cache
TAHITI/mod/: hertbeat.cpp  protoco.cpp
TAHITI/x64/Release/: TAHITI.vcxprojResolveAssemblyReference.cache
ULTRON/: CMakeLists.txt  Makefile  ReadMe.txt  ULTRON  ULTRON.cpp  ULTRON.vcxproj  ULTRON.vcxproj.filters  protoco.h  protoco.mod.cpp  stdafx.cpp  stdafx.h  targetver.h
ULTRON/Release/: ULTRON.vcxprojResolveAssemblyReference.cache
apdutil/: stdafx.h  (+5 more)
cryptutil2/: CMakeLists.txt  Makefile  ReadMe.txt  algorthim.cpp  algorthim.h  basic.fhand.cpp  basic.mod.cpp  crypt.cpp  cryptutil2.cpp  cryptutil2.h  cryptutil2.vcxproj  cryptutil2.vcxproj.filters  extdump.cpp  fhandle.cpp  fhandle.h  frecovery.fhand.cpp  info.cpp  license_algr.mod.cpp  license_create.cpp  mpblock.h  openssl_rsa.mod.cpp  performance_test.cpp  stdafx.cpp  stdafx.h
libERT/: CMakeLists.txt  ReadMe.txt  aes.mod.cpp  algorthim.cpp  algorthim.h  basic.fhand.cpp  basic.mod.cpp  crypto_plus.cpp  dll.h  ext_io.h  external_library.cpp  external_library.h  fhandle.cpp  fhandle.h  frecovery.fhand.cpp  headproto.h  libERT.cpp  libERT.h  libERT.vcxproj  libERT.vcxproj.filters  performance_test.cpp  stdafx.cpp  stdafx.h  utils.cpp
libSemphella/: AES.cpp  AES.h  APD_LOADER.cpp  APD_LOADER.cpp~  BMP.h  CMakeLists.txt  DB.CPP  ECC.cpp  ECC.h  Makefile  Makefile~  ReadMe.txt  VER.h  apd.h  apd.h~  argment.cpp  argment.h  bios.cpp  bios.cpp~  bitmap.h  bmp.cpp  compress.cpp  compress.h  config.h  crypt.cpp  crypt.h  data_recovery.cpp  data_recovery.h  date_recovery_plus.cpp  date_recovery_plus.h  db.cpp  db.h  debug.cpp  debug.h  efstream.h  emmx.cpp  emmx.h  error.h  estring.cpp  estring.h  (+53 more)
libSemphella/ARM/Release/: libSemphella_MP.vcxproj.FileListAbsolute.txt
libSemphella/x64/Release/: main.h.gch
mconf/: CC.cpp  CMakeLists.txt  Makefile  ReadMe.txt  apply.cpp  compile_config.cpp  get_config.cpp  loaddef.h  mconf.cpp  mconf.vcxproj  mconf.vcxproj.filters  menu_process.cpp  prompt.cpp  stdafx.cpp  stdafx.h
mconf/local_uci_head/: uci.h  uci_blob.h  uci_internal.h  ucimap.h
(+450 files in other folders)
