
SET(CMAKE_CXX_FLAGS "-Wno-error=unused-but-set-variable -Wno-error=unused-result -D__LINUX")
LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

ADD_SUBDIRECTORY(libSemphella)
ADD_SUBDIRECTORY(TAHITI)
ADD_SUBDIRECTORY(s2s)
ADD_SUBDIRECTORY(mpshell)
ADD_SUBDIRECTORY(cryptutil2)
ADD_SUBDIRECTORY(PT)
ADD_SUBDIRECTORY(PerformanceInvilige)
ADD_SUBDIRECTORY(ULTRON)


ADD_DEPENDENCIES(TAHITI Semphella)
ADD_DEPENDENCIES(s2s Semphella)
ADD_DEPENDENCIES(mpshell Semphella)
ADD_DEPENDENCIES(cryptutil2 Semphella)
ADD_DEPENDENCIES(PT Semphella)
ADD_DEPENDENCIES(PerformanceInvilige TAHITI Semphella)
ADD_DEPENDENCIES(ULTRON TAHITI Semphella)

#TARGET_LINK_LIBRARIES(TAHITI Semphella)
#TARGET_LINK_LIBRARIES(s2s Semphella)
#TARGET_LINK_LIBRARIES(mpshell Semphella)
#TARGET_LINK_LIBRARIES(cryptutil2 Semphella)
#TARGET_LINK_LIBRARIES(PT Semphella)
#TARGET_LINK_LIBRARIES(PerformanceInvilige TAHITI Semphella)
#TARGET_LINK_LIBRARIES(ULTRON TAHITI Semphella)
