
LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D__LINUX__  -Wno-error=unused-result  -std=c++11 -fpermissive -D_LINUX -Os -fopenmp ")

ADD_SUBDIRECTORY(libSemphella)
ADD_SUBDIRECTORY(TAHITI)
ADD_SUBDIRECTORY(libERT)
ADD_SUBDIRECTORY(s2s)
ADD_SUBDIRECTORY(mpshell)
ADD_SUBDIRECTORY(cryptutil2)
ADD_SUBDIRECTORY(PT)
ADD_SUBDIRECTORY(PerformanceInvilige)
ADD_SUBDIRECTORY(ULTRON)
ADD_SUBDIRECTORY(cp2_extlibtest)


ADD_DEPENDENCIES(TAHITI Semphella)
ADD_DEPENDENCIES(s2s Semphella)
ADD_DEPENDENCIES(mpshell Semphella)
ADD_DEPENDENCIES(ERT Semphella)
ADD_DEPENDENCIES(cryptutil2 Semphella ERT)
ADD_DEPENDENCIES(PT Semphella)
ADD_DEPENDENCIES(PerformanceInvilige TAHITI Semphella)
ADD_DEPENDENCIES(ULTRON TAHITI Semphella)


# Testutils

ADD_SUBDIRECTORY(cp2_extlibtest)