ADD_EXECUTABLE(mconf apply.cpp CC.cpp compile_config.cpp get_config.cpp mconf.cpp menu_process.cpp prompt.cpp stdafx.cpp)
SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -D__LINUX__ -std=c++11 -fpermissive -D_LINUX -O3 -fopenmp")
INSTALL (TARGETS mconf DESTINATION bin)
TARGET_LINK_LIBRARIES(mconf -lSemphella)
INCLUDE_DIRECTORIES(..)
